--- a/box_configuration/anymal/lpc/chrony.conf
+++ b/box_configuration/anymal/lpc/chrony.conf
@@ -59,5 +59,6 @@ server anymal-d039-lpc noselect
 server anymal-d039-npc noselect
 
 hwtimestamp * minpoll -10
-makestep 0.1 -1
+# makestep 0.1 -1 # This always steps automatically
+makestep 0.1 3 # This does not step automatically
 rtcsync
