fixed chrony and pi sync and box urdf

--- a/box_configuration/anymal/lpc/chrony.conf
+++ b/box_configuration/anymal/lpc/chrony.conf
@@ -60,5 +60,11 @@ server anymal-d039-npc noselect
 
 hwtimestamp * minpoll -10
 # makestep 0.1 -1 # This always steps automatically
-makestep 0.1 3 # This does not step automatically
+
+# This always steps automatically
+# makestep 0.1 -1 
+
+# This does not step automatically
+makestep 1.0 10
+
 rtcsync
