--- a/box_configuration/pi/phc2sys_eth0.service
+++ b/box_configuration/pi/phc2sys_eth0.service
@@ -7,6 +7,7 @@ After=ptp4l_eth0.service
 [Service]
 Type=simple
 ExecStart=/usr/sbin/phc2sys -s eth0 -c CLOCK_REALTIME -S 1.0 -w -m
+Restart=on-failure
 
 # Redirect standard output and error to a log file
 StandardOutput=append:/tmp/phc2sys_eth0.log
