--- a/.gitmodules
+++ b/.gitmodules
@@ -53,3 +53,7 @@
 [submodule "box_drivers/tf_bag"]
 	path = box_drivers/tf_bag
 	url = git@github.com:IFL-CAMP/tf_bag.git
+[submodule "box_drivers/graph_msf_dev"]
+	path = box_drivers/graph_msf_dev
+	url = git@bitbucket.org:leggedrobotics/graph_msf_dev.git
+	branch = feature/gt_generation
