--- a/box_drivers/ap20_driver/ap20_driver_ros/CMakeLists.txt
+++ b/box_drivers/ap20_driver/ap20_driver_ros/CMakeLists.txt
@@ -16,6 +16,7 @@ add_message_files(
   ImuDebug.msg
   PositionDebug.msg
   TimestampDebug.msg
+  TimestampKappiDebug.msg
 )
 
 
@@ -45,11 +46,22 @@ include_directories(
 # add_executable(ap20_driver_ros 
 #   src/main.cpp
 # )
-add_executable(demo_cpp_node 
+
+
+add_executable(ap20_driver_dev 
   src/demo_node.cpp
 )
 
-target_link_libraries(demo_cpp_node
+add_executable(ap20_driver_node 
+  src/simple_ap20_node.cpp
+)
+
+
+target_link_libraries(ap20_driver_node
+  ${catkin_LIBRARIES}
+)
+
+target_link_libraries(ap20_driver_dev
   ${catkin_LIBRARIES}
 )
 
@@ -58,7 +70,11 @@ install(
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
-install(TARGETS demo_cpp_node
+install(TARGETS ap20_driver_dev
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(TARGETS ap20_driver_node
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
