--- a/box_utils/box_auto/docker/compose.yaml
+++ b/box_utils/box_auto/docker/compose.yaml
@@ -57,22 +57,22 @@ x-ros2-common-config: &ros2-common-config
 
 
 services:
-  ros2_fix_bags:
-    <<: *ros2-common-config
-    container_name: fix_mcaps
-    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/repair_ros2.py"]
+  # ros2_fix_bags:
+  #   <<: *ros2-common-config
+  #   container_name: fix_mcaps
+  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/repair_ros2.py"]
 
   mcap_to_rosbag:
     <<: *common-config
     container_name: mcap_to_rosbag
     command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/mcap_to_rosbag.py"]
-    depends_on:
-      ros2_fix_bags:
-        condition: service_completed_successfully
-  # zed2i:
-  #   <<: *common-config
-  #   container_name: zed2i
-  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/zed2i.py"]
+    # depends_on:
+    #   ros2_fix_bags:
+    #     condition: service_completed_successfully
+  zed2i:
+    <<: *common-config
+    container_name: zed2i
+    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/zed2i.py"]
 
   # repair_bags:
   #   <<: *common-config
@@ -81,17 +81,17 @@ services:
 
   # #STOP 0
 
-  # merge_mission:
-  #   <<: *common-config
-  #   container_name: merge_mission
-  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/merge_mission.py"]
-  #   depends_on:
-  #     mcap_to_rosbag:
-  #       condition: service_completed_successfully
-  #     zed2i:
-  #       condition: service_completed_successfully
-  #     repair_bags:
-  #       condition: service_completed_successfully
+  merge_mission:
+    <<: *common-config
+    container_name: merge_mission
+    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/merge_mission.py"]
+    depends_on:
+      mcap_to_rosbag:
+        condition: service_completed_successfully
+      zed2i:
+        condition: service_completed_successfully
+      # repair_bags:
+      #   condition: service_completed_successfully
 
   # # STOP 1
   # update_camera_info:
@@ -107,35 +107,37 @@ services:
     <<: *common-config
     container_name: imu_timesync
     command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/imu_timesync.py"]
-    # depends_on:
-    #   merge_mission:
-    #     condition: service_completed_successfully
+    depends_on:
+      merge_mission:
+        condition: service_completed_successfully
 
 
 
-  # cpt7:
-  #   <<: *common-config
-  #   container_name: cpt7
-  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/cpt7.py"]
-  #   depends_on:
-  #     merge_mission:
-  #       condition: service_completed_successfully
+  cpt7:
+    <<: *common-config
+    container_name: cpt7
+    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/cpt7.py"]
+    depends_on:
+      merge_mission:
+        condition: service_completed_successfully
 
-  # hesai:
-  #   <<: *common-config
-  #   container_name: hesai
-  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/hesai.py"]
-  #   depends_on:
-  #     merge_mission:
-  #       condition: service_completed_successfully
+  hesai:
+    <<: *common-config
+    container_name: hesai
+    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/hesai.py"]
+    depends_on:
+      merge_mission:
+        condition: service_completed_successfully
 
-  # topic_freq:
-  #   <<: *common-config
-  #   container_name: topic_freq
-  #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/topic_freq.py"]
-  #   depends_on:
-  #     merge_mission:
-  #       condition: service_completed_successfully
+  topic_freq:
+    <<: *common-config
+    container_name: topic_freq
+    command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/topic_freq.py"]
+    depends_on:
+      hesai:
+        condition: service_completed_successfully
+      cpt7:
+        condition: service_completed_successfully
   
   # # STOP 2
   # color_correction:
