--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ box_utils/box_mission_report/reports*
 *_pb2_grpc.py
 *_pb2.py
 box_model/box_model/urdf/box/box.urdf
+box_bringup/bringup_open3d_slam/data/maps/*
