--- a/.gitmodules
+++ b/.gitmodules
@@ -57,3 +57,7 @@
 	path = box_drivers/graph_msf_dev
 	url = git@bitbucket.org:leggedrobotics/graph_msf_dev.git
 	branch = feature/gt_generation
+[submodule "box_drivers/open3d_slam_private"]
+	path = box_drivers/open3d_slam_private
+	url = git@github.com:leggedrobotics/open3d_slam_private.git
+	branch = main
