--- a/box_utils/box_auto/docker/compose.yaml
+++ b/box_utils/box_auto/docker/compose.yaml
@@ -3,8 +3,8 @@ x-common-config: &common-config
     context: "."
     dockerfile: "./box.Dockerfile"
     ssh:
-      default: "$HOME/.ssh/id_ed25519"
-  image: rslethz/grand_tour_box:latest
+      default: "/home/zivi/.ssh/id_rsa"
+  image: rslethz/gt_box:latest
   runtime: nvidia
   # network_mode: host
   privileged: true
