--- a/box_launch/tmux/jetson_visualization.yaml
+++ b/box_launch/tmux/jetson_visualization.yaml
@@ -21,16 +21,16 @@ windows:
           autostart_launch_files:="
             $(rospack find box_health)/launch/box_health.launch
             $(rospack find bringup_ap20)/launch/ap20.launch
-            $(rospack find box_recording)/launch/rosbag_record_coordinator.launch
-            $(rospack find box_recording)/launch/rosbag_record_node.launch
             $(rospack find bringup_zed2i_visualization)/launch/zed2i_visualization.launch
             $(rospack find box_throttling)/launch/throttle_jetson.launch
             $(rospack find box_relaying)/launch/relay_jetson.launch
             "
           use_gui:=false
     - shell_command:
-      - sleep 1
       - l-docker hdr_start
+    - shell_command:
+      - sleep 10
+      - l-docker ros1_bridge_start
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
