--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,7 @@
 	path = box_drivers/open3d_slam_private
 	url = git@github.com:leggedrobotics/open3d_slam_private.git
 	branch = main
+[submodule "box_drivers/wavemap"]
+	path = box_drivers/wavemap
+	url = git@github.com:ethz-asl/wavemap.git
+	branch = feature/alma
