--- a/box_bringup/bringup_wavemap/package.xml
+++ b/box_bringup/bringup_wavemap/package.xml
@@ -7,6 +7,7 @@
   <license>Proprietary</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>wavemap_all</depend>
+  <depend>livox_ros_driver2</depend>
   <export>
   </export>
 </package>
