Write images and  detections to bag, default under /data/, oterwise parameter controlled

--- a/box_calibration/grand_tour_camera_detectors/CMakeLists.txt
+++ b/box_calibration/grand_tour_camera_detectors/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
         sensor_msgs
         cv_bridge
         grand_tour_camera_detection_msgs
+        rosbag
 )
 find_package(Eigen3 3.3 REQUIRED NO_MODULE)
 find_package(OpenCV REQUIRED)
