--- a/box_calibration/grand_tour_calibration_viewers/CMakeLists.txt
+++ b/box_calibration/grand_tour_calibration_viewers/CMakeLists.txt
@@ -159,7 +159,8 @@ include_directories(
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
 catkin_install_python(PROGRAMS
-  scripts/view_camera_detections.py
+  scripts/view_camera_camera_optimization.py
+  scripts/launch_viewer.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
