--- a/.gitmodules
+++ b/.gitmodules
@@ -51,16 +51,19 @@
 	url = git@github.com:leggedrobotics/adi_imu_driver.git
 	branch = main
 [submodule "box_drivers/tf_bag"]
-	path = box_drivers/tf_bag
+	path = box_applications/tf_bag
 	url = git@github.com:IFL-CAMP/tf_bag.git
 [submodule "box_drivers/graph_msf_dev"]
-	path = box_drivers/graph_msf_dev
+	path = box_applications/graph_msf_dev
 	url = git@bitbucket.org:leggedrobotics/graph_msf_dev.git
 	branch = feature/gt_generation
 [submodule "box_drivers/open3d_slam_private"]
-	path = box_drivers/open3d_slam_private
+	path = box_applications/open3d_slam_private
 	url = git@github.com:leggedrobotics/open3d_slam_private.git
 	branch = main
 [submodule "box_drivers_ros2/ros1_bridge"]
 	path = box_drivers_ros2/ros1_bridge
 	url = git@github.com:leggedrobotics/ros1_bridge.git
+[submodule "box_applications/elevation_mapping_cupy"]
+	path = box_applications/elevation_mapping_cupy
+	url = git@github.com:leggedrobotics/elevation_mapping_cupy.git
