--- a/box_launch/tmux/nuc_recording.yaml
+++ b/box_launch/tmux/nuc_recording.yaml
@@ -26,6 +26,7 @@ windows:
             $(rospack find bringup_hesai)/launch/hesai_lidar.launch
             $(rospack find bringup_livox)/launch/livox_lidar.launch
             $(rospack find bringup_cpt7)/launch/rover.launch
+            $(rospack find grand_tour_camera_detectors)/launch/detectors_on_nuc_generic.launch
             "
           use_gui:=false
     - shell_command:
