--- a/box_launch/tmux/opc_calib.yaml
+++ b/box_launch/tmux/opc_calib.yaml
@@ -1,4 +1,4 @@
-session_name: jetson
+session_name: opc
 
 before_script: "../scripts/initialize_session.sh"
 
@@ -8,8 +8,8 @@ windows:
   shell_command_before:
     - export HOSTNAME
     - export DISPLAY=:0.0
-    - export ROS_MASTER_URI=http://192.168.2.51:11311
-    - export ROS_IP=192.168.2.51
+    - export ROS_MASTER_URI=http://192.168.2.154:11311
+    - export ROS_IP=192.168.2.154
 
   options:
     pane-border-status: top
@@ -19,12 +19,14 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
-            $(rospack find launch_jetson)/launch/jetson_calib_imu.launch
+            $(rospack find box_rviz)/launch/box_rviz.launch
+            $(rospack find bringup_ap20)/launch/ap20_multiplot.launch
             "
-          use_gui:=false
+          use_gui:=true
     - shell_command:
       - source /opt/ros/noetic/setup.bash
       - source ~/catkin_ws/devel/setup.bash
-      - source ~/catkin_ws/src/grand_tour_box/box_configuration/jetson/alias.sh  
-      - df -h /data
+      - source ~/catkin_ws/src/grand_tour_box/box_configuration/opc/alias.sh 
+      - rosparam echo use_sim_time
+      - df -h $HOME
       focus: true
