--- a/box_launch/tmux/opc_calib_lidar.yaml
+++ b/box_launch/tmux/opc_calib_lidar.yaml
@@ -19,7 +19,7 @@ windows:
       - source ~/catkin_ws/devel/setup.bash
       - roslaunch bringup_fkie fkie.launch
           autostart_launch_files:="
-            $(rospack find box_rviz)/launch/recording.launch
+            $(rospack find box_rviz)/launch/lidar.launch
             "
           load_launch_files:="
             $(rospack find box_rviz)/launch/multiplot.launch
