--- a/box_calibration/grand_tour_calibration_viewers/CMakeLists.txt
+++ b/box_calibration/grand_tour_calibration_viewers/CMakeLists.txt
@@ -10,6 +10,8 @@ project(grand_tour_calibration_viewers)
 find_package(catkin REQUIRED COMPONENTS
   grand_tour_camera_detection_msgs
   rospy
+  message_generation
+  std_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -53,11 +55,11 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
+add_service_files(
+    FILES
 #   Service1.srv
-#   Service2.srv
-# )
+    FetchRecordingIDFromBlueprintNode.srv
+ )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -67,10 +69,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   grand_tour_camera_detection_msgs
-# )
+generate_messages(
+   DEPENDENCIES
+   std_msgs
+)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -104,7 +106,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES grand_tour_calibration_viewers
-#  CATKIN_DEPENDS grand_tour_camera_detection_msgs rospy
+ CATKIN_DEPENDS grand_tour_camera_detection_msgs rospy
 #  DEPENDS system_lib
 )
 
