--- a/box_launch/tmux/opc_calib_camera.yaml
+++ b/box_launch/tmux/opc_calib_camera.yaml
@@ -21,6 +21,7 @@ windows:
           autostart_launch_files:="
             $(rospack find box_rviz)/launch/camera.launch
             $(rospack find grand_tour_ceres_apps)/launch/camera_camera_online_calibration.launch
+            $(rospack find grand_tour_calibration_viewers)/launch/all_cameras.launch
             "
           load_launch_files:="
             $(rospack find box_rviz)/launch/multiplot.launch
