--- a/box_utils/box_auto/compose/dev.yaml
+++ b/box_utils/box_auto/compose/dev.yaml
@@ -24,8 +24,8 @@ x-common-config: &common-config
               - compute # CUDA
               - video   # encoding 
   volumes:
-    - /Data/Projects/GrandTour/deployment_day_1/2024-10-01-11-29-55:/mission_data
-    - /home/jonfrey/git/grand_tour_box:/home/catkin_ws/src/grand_tour_box
+    - "${MISSION_DATA:-/mission/data}:/mission_data"
+    - "${GRAND_TOUR_BOX_PATH:-$HOME/git/grand_tour_box}:/home/catkin_ws/src/grand_tour_box"
 x-ros2-common-config: &ros2-common-config
   build:
     context: "$HOME/git/grand_tour_box/box_utils/box_auto/docker"
@@ -52,12 +52,11 @@ x-ros2-common-config: &ros2-common-config
               - compute # CUDA
               - video   # encoding 
   volumes:
-    - /Data/Projects/GrandTour/deployment_day_1/2024-10-01-11-47-44:/mission_data
-    - /home/jonfrey/git/grand_tour_box:/home/catkin_ws/src/grand_tour_box # For debugging
+    - "${MISSION_DATA:-/mission/data}:/mission_data"
+    - "${GRAND_TOUR_BOX_PATH:-$HOME/git/grand_tour_box}:/home/catkin_ws/src/grand_tour_box"
 
 
 services:
-
   export_raw_imu_bag:
     <<: *common-config
     container_name: export_raw_imu_bag
@@ -67,7 +66,6 @@ services:
     <<: *common-config
     container_name: export_gps_gt_trajectory_bag
     command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/export_gps_gt_trajectory_bag.py"]
-
 
   mcap_to_rosbag:
     <<: *common-config
@@ -179,3 +177,5 @@ services:
   # #   <<: *common-config
   # #   container_name: repair_bags
   # #   command: ["python3", "/home/catkin_ws/src/grand_tour_box/box_utils/box_auto/scripts/repair_bags.py"]
+
+
