updated kleinkram integration

--- a/box_launch/launch_jetson/package.xml
+++ b/box_launch/launch_jetson/package.xml
@@ -22,4 +22,5 @@
   <depend>box_relaying</depend>
   <depend>box_calibration</depend>
   <depend>grand_tour_camera_detectors</depend>
+  <depend>zed_wrapper</depend>
 </package>
