--- a/.gitmodules
+++ b/.gitmodules
@@ -74,3 +74,8 @@
 	path = box_applications/elevation_mapping_cupy
 	url = git@github.com:leggedrobotics/elevation_mapping_cupy.git
 	branch = main
+[submodule "box_applications/dlio"]
+	path = box_applications/dlio
+	url = git@github.com:leggedrobotics/dlio.git
+	branch = grandtour
+
