--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 	url = git@github.com:leggedrobotics/dlio.git
 	branch = grandtour
 
+[submodule "box_applications/evo"]
+	path = box_applications/evo
+	url = git@github.com:leggedrobotics/evo.git
