--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,12 +8,14 @@ repos:
       - id: black
         language_version: python3
         args: [--line-length=120]
+        require_serial: true
   - repo: https://github.com/PyCQA/flake8
     rev: 7.0.0
     hooks:
       - id: flake8
         args: [--max-line-length=120, "--ignore=E402,E501,W503,C901,E731,W605,E722", "--extend-ignore=E203", "--exclude=_*,.vscode,.git", "--exclude=*_pb2*"]
         language_version: python3
+        require_serial: true
   - repo: local
     hooks:
       - id: jupyter-nb-clear-output
@@ -26,5 +28,14 @@ repos:
     rev: v4.5.0 # Use the version you want
     hooks:
       - id: check-added-large-files
-        args: ["--maxkb=2000"]  
+        args: ["--maxkb=2000"]
+  - repo: local
+    hooks:
+      - id: check-submodule-branches
+        name: Check submodule branches
+        entry: python .git-hooks/check_submodule_branches.py
+        language: python
+        files: .gitmodules
+        pass_filenames: false
+        additional_dependencies: [GitPython]
 
