removed ap20 bag

--- a/box_utils/box_recording/cfg/calib_front_cameras_imu.yaml
+++ b/box_utils/box_recording/cfg/calib_front_cameras_imu.yaml
@@ -10,13 +10,12 @@ jetson:
     zed2i:
       - /gt_box/zed2i_driver_node/left_raw/image_raw_gray
       - /gt_box/zed2i_driver_node/right_raw/image_raw_gray
-    ap20:
-      - /gt_box/ap20/imu
-      - /gt_box/ap20/prism_position
     ap20_aux:
       - /ap20/tps
       - /ap20/imu
-      - /gt_box/ap20/debug
+      - /gt_box/ap20/imu_debug
+      - /gt_box/ap20/position_debug
+      - /gt_box/ap20/timestamp_debug
     clock:
       - /clock
     adis:
