--- a/box_utils/box_recording/cfg/imu_ptp.yaml
+++ b/box_utils/box_recording/cfg/imu_ptp.yaml
@@ -7,13 +7,12 @@ jetson:
       - /gt_box/alphasense_driver_node/imu
       - /gt_box/health_status/jetson/status
       - /gt_box/health_status/pi/status
-    ap20:
-      - /gt_box/ap20/imu
-      - /gt_box/ap20/prism_position
     ap20_aux:
       - /ap20/tps
       - /ap20/imu
-      - /gt_box/ap20/debug
+      - /gt_box/ap20/imu_debug
+      - /gt_box/ap20/position_debug
+      - /gt_box/ap20/timestamp_debug
     clock_jetson:
       - /clock
     adis:
