--- a/.github/workflows/full.yaml
+++ b/.github/workflows/full.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: box_utils/box_auto/docker/
           file: box_utils/box_auto/docker/box_full.Dockerfile
           push: true
           tags: rslethz/grand_tour_box:full
